// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "proto/src/proto.proto";

package mz_service.params;

message ProtoGrpcClientParameters {
  optional mz_proto.ProtoDuration connect_timeout = 1;
  optional mz_proto.ProtoDuration http2_keep_alive_interval = 2;
  optional mz_proto.ProtoDuration http2_keep_alive_timeout = 3;
}
