// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "proto/src/proto.proto";
import "persist-client/src/cfg.proto";

package mz_storage_client.types.parameters;

message ProtoStorageParameters {
    mz_persist_client.cfg.ProtoPersistParameters persist = 1;
    bool enable_multi_worker_storage_persist_sink = 2;
}
